# Bachelor_INF

./: .env  .gitignore  .latexmkrc  .pre-commit-config.yaml  BlackAluminiumFox.bib  BlackAluminiumFoxPresentation.bib  QuestioningClusters.bib  QuestioningClustersPresentation.bib  README.md  ansible_testing.bib  bibdriver.sty  bibdriver_url_in_qrcode.sty  blackaluminuiumfox.bib  blackaluminuiumfoxpresentation.bib  cicdcdont_lightning.bib  editors.bib  gls-editorstyle.sty  gls-linklist.sty  import-from-math-glossar.bib  import-from-math.bib  institutes.bib  licenses.bib  main.tex  ocr-d.bib  projecthocco.bib  pyproject.toml  shibboleth.bib  shortcuts.bib  software.bib  t3_3000.cls  t3_3000.tex  t3_3000_title.sty  technical.bib
autonocite/: autonocite.bib  autonocite.sty
data/: bll-ontology.ttl  bll-thesaurus.ttl
data/SPEEDTEST_oaipmh/: lang-sci-press_ft_debug.json  lang-sci-press_ft_raw_debug.json  ubffm_ft.json  ubffm_ft_debug.json  ubffm_ft_raw_debug.json
data/gazetteers/: bll.de.dict  bll.en.dict
doc/: .latexmkrc  README.md  bachelor.cls  bachelor.tex  bachelor_declaration.sty  bachelor_technical.bib  bachelor_title.sty  metadata.tex
doc/bibliographies/: Bachelor_INF.bib  BlackAluminiumFox.bib  BlackAluminiumFoxPresentation.bib  QuestioningClusters.bib  QuestioningClustersPresentation.bib  README.md  (+11 more)
gitversion/: gitversion.sty
src/: check_gpu.ipynb  gpu_utls.py  speedtest_oaipmh.py  statistics.ipynb  train.py  train_modell.ipynb
t3_3000/: t3_3000.cls  t3_3000.tex  t3_3000_abstract.sty  t3_3000_declaration.sty  t3_3000_pagestyle.sty  t3_3000_technical.bib
(+97 files in other folders)
