[tool.poetry]
name = "bachelor_inf"
version = "0.1.0"
description = ""
authors = ["Jens Heinrich <github.com/JensHeinrich>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.23.1"
pandas = "^1.4.3"
torch = "^1.12.0"
spacy = "^3.4.1"
transformers = "^4.21.0"
datasets = "^2.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.15.1"
rdflib = "^6.2.0"
networkx = "^2.8.5"
langcodes = "^3.3.0"
language-data = "^1.1"
Sickle = "^0.7.0"
pygtrie = "^2.5.0"
matplotlib = "^3.5.2"
scipy = "^1.9.0"
tensorboard = "^2.9.1"
torch-tb-profiler = "^0.4.0"
evaluate = "^0.2.2"
PyPDF2 = "^2.10.0"
fairscale = "^0.4.8"
types-lxml = "^2022.4.10"
"pdfminer.six" = "^20220524"
accelerate = "^0.12.0"
nvidia-ml-py3 = "^7.352.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
types-lxml = "^2022.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
